--- a/.github/workflows/tests-auth.yaml
+++ b/.github/workflows/tests-auth.yaml
@@ -1,9 +1,11 @@
 name: test-auth
 
-on: 
-  pull_request
+on:
+  pull_request:
+    paths:
+      - 'auth/**'
 
-jobs: 
+jobs:
   build:
     runs-on: ubuntu-latest
     steps:
